src/test/deca/syntax/valid/05readInt_if_else.deca
{
    int x ;
    print("Entrez un entier:");
    x = readInt();
    if (17 < x) {
        println("17 < ", x);
    } else {
        println(x, " <= 17");
    }
}
