src/test/deca/syntax/invalid/renduInter02/00unary_plus.deca
// Description:
//      Programme lexicalement incorrect
//      => L'opérateur "+" est un opérateur binaire
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : token '+' inattendu

{
    int x = +7;
    println("x=", x);
}